# te_take_off

./: README.md
te-take-off/: .env  Cargo.toml  Dockerfile  Dockerfile_chat_gpt  configuration.rs  configuration.yaml  docker-compose.yaml  docker-compose.yaml_bp  sqlx-data.json
te-take-off/migrations/: 20230202170107_create_schema.sql  20230308183756_create_user.sql
te-take-off/src/: endpoints.rs  errors.rs  main.rs  repository.rs  request.rs  session.rs
