[package]
name = "te-take-off"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.2", features = ["json", "secrets"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "json", "offline"] }
serde_json = "1"
serde = "1"
thiserror = "1.0.38"
tera = "1.17"
base64 = "0.13"
itertools = "0.8.1"
